# nyx_taxi_db_loader

./: README.md  pyproject.toml
nyc_taxi_loader/: loader.py
nyc_taxi_loader/sql/: dimensions_creation.sql
nyc_taxi_loader/sql/exercices/: exos.sql
