[tool.poetry]
name = "nyc-taxi-loader"
version = "0.1.0"
description = ""
authors = ["Philippe Paulos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
duckdb = "1.3.1"
polars = "1.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
